plugins {
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.0.14'
    id 'application'
    id 'jacoco'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(19)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Validations
    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'

    // Tests
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.testfx:testfx-junit5:4.0.17'
    testImplementation 'org.mockito:mockito-core:5.8.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    // Loggers - Diagnostics
    implementation 'org.slf4j:slf4j-api:2.0.9'
    implementation 'ch.qos.logback:logback-classic:1.4.14'
    implementation 'ch.qos.logback:logback-core:1.4.14'

    // Hibernate - ORM
    implementation ('org.hibernate:hibernate-core:6.2.9.Final') {
        exclude group: 'org.slf4j', module: 'slf4j-api'
    }

    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    runtimeOnly 'mysql:mysql-connector-java:8.0.33'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'

    // BCrypt for password hashing
    implementation 'org.mindrot:jbcrypt:0.4'

    implementation 'org.jboss.logging:jboss-logging:3.4.3.Final'

    compileOnly 'jakarta.enterprise:jakarta.enterprise.cdi-api:3.0.0'


    // JavaFX
    implementation 'org.controlsfx:controlsfx:11.1.2'
}

jacocoTestReport {
    dependsOn test
}

javafx {
    version = "19"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

application {
    mainClass = 'com.oop.passenger_transport.HelloApplication'
}

test {
    useJUnitPlatform()
}

tasks.named('jar') {
    duplicatesStrategy = 'exclude'
    manifest {
        attributes(
                'Main-Class': 'com.oop.passenger_transport.HelloApplication'
        )
    }

    run {
        jvmArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.controls,javafx.fxml'
        ] as List<String>
    }
}
